<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FF252525"
	xmlns:ads="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="20dp"
		android:layout_alignParentTop="true"
		android:paddingLeft="10dp"
		android:gravity="center"
		android:background="#FF3A3A3A"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<ImageView
			android:layout_height="wrap_content"
			android:layout_marginRight="5dp"
			android:layout_width="17dp"
			android:layout_gravity="left"
			android:src="@drawable/ic_launcher"
			android:layout_marginLeft="30dp"/>

		<TextView
			android:id="@+id/header_text"
			android:layout_width="match_parent"
			android:layout_height="18dp"
			android:text="@string/srceng_app_name"
			android:textSize="12sp"
			android:paddingTop="1dp"
			android:textColor="#FFFFFFFF"/>

		<ImageButton
			android:layout_width="13dp"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="13dp"
			android:src="@drawable/places_ic_clear"
			android:layout_marginRight="40dp"
			android:onClick="exit"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/center"
		android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/header"
		android:paddingBottom="5dp"
		android:layout_gravity="center">

		<LinearLayout
			android:id="@+id/bg"
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:orientation="horizontal"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:background="@drawable/background">

			<LinearLayout
				android:layout_width="400dp"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:paddingTop="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingBottom="10dp"
				android:background="@drawable/bam_touming"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:fillViewport="true">

					<LinearLayout
						android:id="@+id/body"
						android:layout_width="match_parent"
						android:layout_height="fill_parent"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="14dp"
							android:text="启动环境"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:gravity="center"
							android:textSize="10sp"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="15dp"
							android:layout_marginLeft="6dp"
							android:text="@string/srceng_launcher_command_args"
							android:textAppearance="?android:attr/textAppearanceMedium"
							android:textSize="11sp"/>

						<EditText
							android:id="@+id/edit_cmdline"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:maxLines="1"
							android:inputType="text"
							android:text="-console"
							android:layout_marginLeft="6dp"
							android:layout_marginRight="6dp"
							android:layout_marginTop="2dp"
							android:layout_marginBottom="5dp"
							android:backgroundTint="@color/hl_color"
							android:textSize="11sp"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="15dp"
							android:layout_marginLeft="6dp"
							android:text="@string/srceng_launcher_env"
							android:textAppearance="?android:attr/textAppearanceMedium"
							android:textSize="11sp"
							android:layout_marginTop="5dp"/>

						<EditText
							android:id="@+id/edit_env"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="LIBGL_USEVBO=0"
							android:maxLines="1"
							android:inputType="text"
							android:layout_marginLeft="6dp"
							android:layout_marginRight="6dp"
							android:layout_marginTop="2dp"
							android:layout_marginBottom="5dp"
							android:backgroundTint="@color/hl_color"
							android:textSize="11sp"
							android:background="#FFFFE200"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="15dp"
							android:layout_marginLeft="6dp"
							android:text="@string/srceng_launcher_game_path"
							android:textAppearance="?android:attr/textAppearanceMedium"
							android:textSize="11sp"
							android:layout_marginTop="5dp"/>

						<EditText
							android:id="@+id/edit_gamepath"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:maxLines="1"
							android:inputType="text"
							android:text="/sdcard/srceng/"
							android:layout_marginLeft="6dp"
							android:layout_marginRight="6dp"
							android:layout_marginTop="2dp"
							android:layout_marginBottom="5dp"
							android:backgroundTint="@color/hl_color"
							android:textSize="11sp"/>

						<Button
							android:id="@+id/button_gamedir"
							android:layout_width="100dp"
							android:layout_height="35dp"
							android:text="@string/srceng_launcher_set_game_path"
							android:layout_marginLeft="3dp"
							android:layout_marginRight="3dp"
							android:layout_marginTop="5dp"
							android:layout_marginBottom="5dp"
							android:textColor="#FFFFFF"
							android:background="@drawable/about_buttoncolor"
							android:onClick="setPath"/>

						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="8dp"
								android:layout_marginLeft="2dp"
								android:text="在这里设置 游戏文件夹路径 是必要的"
								android:textAppearance="?android:attr/textAppearanceSmall"
								android:textSize="8sp" />

						</RelativeLayout>

						<ImageView
							android:layout_height="wrap_content"
							android:layout_width="17dp"
							android:layout_gravity="left"
							android:src="@drawable/ic_launcher"
							android:layout_marginLeft="5dp"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:background="@drawable/bam_touming"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp">

				<Button
					android:id="@+id/button_launch"
					android:layout_width="wrap_content"
					android:layout_height="35dp"
					android:text="@string/srceng_launcher_launch"
					android:layout_weight="1"
					android:textColor="#FFFFFF"
					android:layout_marginBottom="5dp"
					android:background="@drawable/start_botton"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="11dp"
					android:layout_marginRight="10dp"
					android:onClick="runGame"/>

				<Button
					android:id="@+id/button_about"
					android:layout_width="wrap_content"
					android:layout_height="35dp"
					android:text="@string/srceng_launcher_about"
					android:layout_weight="1"
					android:textColor="#FFFFFF"
					android:layout_marginBottom="5dp"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="60dp"
					android:background="@drawable/about_buttoncolor"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/bam_touming"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="14dp"
					android:text="启动设置"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textSize="10sp"
					android:gravity="center"
					android:layout_marginTop="10dp"/>

				<CheckBox
					android:id="@+id/checkbox_use_volume"
					android:layout_width="wrap_content"
					android:layout_height="20dp"
					android:layout_marginLeft="3dp"
					android:layout_marginRight="3dp"
					android:layout_marginTop="30dp"
					android:layout_marginBottom="5dp"
					android:buttonTint="@color/hl_color"
					android:text="@string/srceng_launcher_volume_buttons"
					android:textSize="9sp"
					android:textColor="#FFFFAC00"/>

				<CheckBox
					android:id="@+id/checkbox_immersive_mode"
					android:layout_width="wrap_content"
					android:layout_height="20dp"
					android:layout_marginLeft="3dp"
					android:layout_marginRight="3dp"
					android:layout_marginTop="80dp"
					android:layout_marginBottom="5dp"
					android:buttonTint="@color/hl_color"
					android:text="@string/srceng_launcher_immersive_mode"
					android:textSize="10sp"/>

				<CheckBox
					android:id="@+id/checkbox_check_updates"
					android:layout_width="wrap_content"
					android:layout_height="20dp"
					android:layout_marginLeft="3dp"
					android:layout_marginRight="3dp"
					android:layout_marginTop="55dp"
					android:layout_marginBottom="5dp"
					android:buttonTint="@color/hl_color"
					android:text="@string/srceng_launcher_check_updates"
					android:textSize="9sp"/>

			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>

	<RelativeLayout
		android:layout_width="720dp"
		android:layout_height="match_parent"
		android:layout_below="@id/center"
		android:layout_alignParentRight="true">

	</RelativeLayout>

</RelativeLayout>

